# Claude-Session-Backup

./: .ghtraf.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: main.yml  release.yml
claude_session_backup/: __init__.py  __main__.py  _version.py  cli.py  commands.py  config.py  distill.py  fts5_db.py  fts5_importer.py  fts5_index.py  fts5_migrations.py  fts_paths.py  git_ops.py  ids.py  index.py  lockfile.py  metadata.py  migrations.py  pathkit.py  scanner.py  search.py  search_render.py  sesslog_parser.py  sesslog_scanner.py  timeline.py  transcript_walker.py
comfydbg/: _version.py  launcher.py
docs/: README.md  automation.md  commands.md  maintenance.md  platforms.md
docs/stats/: README.md  index.html
hooks/: hooks.json
hooks/scripts/: backup-hook.py  run-hook.mjs
scripts/: sync-versions.py
tests/: conftest.py  test_backup_hook.py  test_cli.py  test_commands.py  test_config.py  test_distill.py  test_fts5_db.py  test_fts5_importer.py  test_fts5_index.py  test_fts5_migrations.py  test_fts_paths.py  test_hook.py  test_ids.py  test_index.py  test_lockfile.py  test_metadata.py  test_migrations.py  test_passthrough.py  test_pathkit.py  test_pathkit_layout.py  test_restore.py  test_scanner.py  test_search.py  test_search_render.py  test_session_sources.py  test_sesslog_parser.py  test_sesslog_scanner.py  test_timeline.py  test_version.py  test_view.py
tests/checklists/: v0.2.10__Feature__csb-search-sort.md  v0.2.3__Feature__csb-scan-disambiguation.md  v0.2.7__Feature__short-uuid-sugar.md  v0.2.9__Feature__sessions-only-and-session-id-rename.md  v0.3.0__Feature__fts5-build.md  v0.3.10__Feature__csb-config-settings-ttl-passthrough.md  v0.3.11__Phase__safe-update-umbrella-and-backfill.md  v0.3.12__Phase__full-restore.md  v0.3.19__Fix__scan-deleted-grammar-unification.md  (+19 more)
(+20 files in other folders)
