[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-session-backup"
dynamic = ["version"]
description = "Git-backed Claude Code session backup with timeline view, folder analysis, deletion detection, and session restore."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [
    {name = "djdarcy", email = "6962246+djdarcy@users.noreply.github.com"},
]
keywords = ["claude", "claude-code", "session", "backup", "restore", "git", "archive", "conversation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/DazzleML/Claude-Session-Backup"
Repository = "https://github.com/DazzleML/Claude-Session-Backup"
Issues = "https://github.com/DazzleML/Claude-Session-Backup/issues"

[project.scripts]
csb = "claude_session_backup.cli:main"

[tool.setuptools.dynamic]
version = {attr = "claude_session_backup._version.PIP_VERSION"}

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_session_backup", "claude_session_backup.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
